# trueskill

./: Cargo.toml
src/: lib.rs  matchmaking.rs  rating.rs  score.rs  simple_trueskill.rs  trueskill.rs  update.rs  utils.rs
