[package]
authors = ["lfenart <lucas.fenart@protonmail.com>"]
edition = "2018"
name = "trueskill"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10"
num-traits = "0.2"
serde = {version = "1.0", optional = true, default-features = false, features = ["derive"]}
statrs = "0.13"
