[package]
name = "trueskill"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
statrs = "0.15"
serde = { version = "1.0", optional = true, features = ["derive"] }

[dev_dependencies]
serde_json = "1.0"
